# py_docker

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  requirements.txt
app/: gunicorn_conf.py  main.py  pyproject.toml
app /: apiUtil.py  database.py  main.py  middleware.py  redisService.py  sample.json
app/app/: apiUtil.py  database.py  main.py  tasks.py
app/app/api/: api.py
app/app/api/endpoints/: activate.py  celery.py  item.py  mongo.py  sample.py  uploadfile.py
app/app/api/exception/: app_exception.py
app/app/api/model/: payload.py  plus.py
app/app/api/models/: get_items200_response.py  get_root200_response.py  payload.py  payload_all_of.py  post.py
app/app/router/: item.py  sample.py
app/app/tests/: test_activate.py  test_celery.py  test_item.py  test_main.py  test_minio.py  test_mongo.py
app/docs/: openapi.yaml
consumer/: Dockerfile  consumer.py
docs/: openapi.yaml
env/: app.env
mongo_db/db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-2121817797039929745.wt  collection-0-5353115183381298306.wt  collection-2-5353115183381298306.wt  collection-4-5353115183381298306.wt  collection-8-5353115183381298306.wt  index-1-2121817797039929745.wt  index-1-5353115183381298306.wt  index-10-5353115183381298306.wt  index-3-5353115183381298306.wt  index-5-5353115183381298306.wt  index-6-5353115183381298306.wt  index-9-5353115183381298306.wt  sizeStorer.wt
mongo_db/db/diagnostic.data/: metrics.2022-12-07T07-39-36Z-00000  metrics.2022-12-07T10-12-35Z-00000  metrics.interim
