[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.88"
uvicorn = "0.20"
gunicorn = "^20.1.0"
boto3 = "^1.26.29"
celery = "^5.2.7"
minio = "^7.1.12"
pika = "^1.3.1"
pydantic = "^1.10.2"
pymongo = "^4.3.3"
redis = "^4.4.0"
python-multipart = "^0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
